---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: ????
  Bugfixes:
    - Fixes possible bug that can happen when housekeeping module breaks lookup table reference (https://github.com/loneguardian/CraftingCombinator/commit/38e779f4361dc6cad7e18313a3ffc0825bda4dbb)
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2022-11-07
  Bugfixes:
    - Fixes possible bug that can happen when a player mines a cc without sufficient inventory space for module chest's content (https://github.com/loneguardian/CraftingCombinator/commit/77cd21e7d1ac4e64c33cf70b437434d5d971acfd)
  Changes:
    - Cloning module has been rewritten to properly handle signal cache cloning
    - Minor optimizations
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2022-11-04
  Info:
    - First release of Xeraph's fork (based on Crafting Combinator 0.16.3)
    - Migration to this version will acknowledge the removal of 'crafting_combinator:settings-entity (programmable-speaker)' and its related objects, this is expected
  Bugfixes:
    - Fixed possible duping if an incorrect recipe is sent to cc (https://github.com/theRustyKnife/CraftingCombinator/issues/70)
    - Fixed GUI not closing when its associated cc/rc is destroyed
    - Fixed cc's tendency to insert too much items from the overflow chest after recipe switch (https://mods.factorio.com/mod/crafting_combinator/discussion/632ce909888658ef30d15be0 https://forums.factorio.com/viewtopic.php?p=570197#p570197)
      - By default, cc will insert ingredients for only two craft cycles, this can be changed individually for each cc
  Features:
    - Blueprints and ghosts now carry cc and rc data
    - New sticky behaviour: Craft-n-before-switch